# erl_geometry

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  Pipfile  README.md  entry_points.txt  erl_geometry.repos  package.xml  plugin_description.xml  pyproject.toml  requirements.txt  setup.py
backup/src/: incremental_quadtree.cpp  node.cpp  visible_ray_synthesis.cpp
backup/test/: test_euler_angle.cpp  test_incremental_quadtree.cpp  test_intersection_between_ray_and_aabb2d.cpp  test_marching_square.cpp  test_opencv_circle.py  test_sphere_flip_concave.py
cmake/: erl_geometryConfig.cmake.in  erl_geometry_dependencies.cmake
data/: bunny_z_up.ply  house_expo_room_0000.ply  house_expo_room_1451.json  house_expo_room_1451.ply  octree_newer_college.yaml
data/cow_and_lady/: open3d_view_status.json
data/gazebo/: gazebo_room_3d_no_ceiling.ply  gazebo_room_3d_with_ceiling.ply
data/replica_office_0_depth/: traj.csv
docker/: build.bash
docker/ros-noetic/: Dockerfile  build.bash
docker/ubuntu-2004/: Dockerfile  build.bash
docker/ubuntu-2204/: Dockerfile  build.bash
include/erl_geometry/: aabb.hpp  abstract_occupancy_octree.hpp  abstract_occupancy_octree.tpp  abstract_occupancy_quadtree.hpp  abstract_occupancy_quadtree.tpp  abstract_octree.hpp  abstract_octree.tpp  abstract_octree_drawer.hpp  abstract_octree_node.hpp  abstract_quadtree.hpp  abstract_quadtree.tpp  (+127 more)
launch/: README.md  test_occupancy_tree_grid_display.launch
msg/: OccupancyTreeMsg.msg
rviz/: test_occupancy_tree_grid_display.rviz  test_rviz_plugin_better_point_cloud2_display.rviz  test_rviz_plugin_occupancy_tree_display.rviz
scripts/: .polyscope.ini  README.md  compute_general_second_order_curves_2d.py  compute_general_second_order_curves_3d.py  compute_intersection_sympy.py  compute_rotated_ellipse.py  compute_rotated_ellipsoid.py  compute_rotated_ellipsoid_intersected_soft.txt  compute_viewing_direction.py  crop_point_cloud.py  download_data.bash  draw_gazebo_room_2d.py  install_dependencies_ubuntu.bash  mat_to_bin.py  npy_to_bin.py  point_cloud_to_mesh.py  read_array_from_bin.py  rosbag_extract_cow_and_lady.py  rosbag_extract_fah.py  rosbag_extract_newer_college.py  setup_ubuntu_20.04.bash  setup_ubuntu_22.04_24.04.bash  test_sympy.py
src/: abstract_occupancy_octree.cpp  abstract_occupancy_quadtree.cpp  abstract_octree.cpp  abstract_octree_drawer.cpp  abstract_octree_node.cpp  abstract_quadtree.cpp  abstract_quadtree_drawer.cpp  abstract_quadtree_impl.cpp  abstract_quadtree_node.cpp  bayesian_hilbert_map.cpp  bayesian_hilbert_map_torch.cpp  bresenham_2d.cpp  camera_base_3d.cpp  camera_intrinsic.cpp  city_street_map.cpp  convex_hull.cpp  cow_and_lady.cpp  depth_camera_3d.cpp  depth_frame_3d.cpp  euler_angle.cpp  gazebo_room_2d.cpp  hidden_point_removal.cpp  house_expo_map.cpp  house_expo_map_lidar_2d.cpp  incremental_quadtree.cpp  init.cpp  intersection.cpp  lidar_2d.cpp  lidar_3d.cpp  lidar_frame_2d.cpp  lidar_frame_3d.cpp  log_odd_map_2d.cpp  marching_cubes.cpp  marching_square.cpp  marching_squares.cpp  nd_tree_setting.cpp  newer_college.cpp  node.cpp  occupancy_map.cpp  occupancy_nd_tree_setting.cpp  (+23 more)
src/ros/: CMakeLists.txt  ros.cmake
src/ros/ros1/: gazebo_room_2d_node.cpp
src/ros/ros1/rviz_plugin/: better_point_cloud2_display.cpp  occupancy_tree_grid_display.cpp  occupancy_tree_map_display.cpp
src/ros/ros2/: gazebo_room_2d_node.cpp  point_cloud_node.cpp
src/ros/ros2/rviz_plugin/: better_point_cloud2_display.cpp  occupancy_tree_grid_display.cpp  occupancy_tree_map_display.cpp
src/ros/rviz_plugin/: better_point_cloud2_display.cpp
test/: CMakeLists.txt  test_incremental_quadtree.cpp  test_intersection_between_ray_and_aabb2d.cpp  test_lidar_area.cpp  test_lidar_frame_2d.py  test_marching_square.cpp  test_quadtree.cpp  test_quadtree.py  test_quadtree_find_neighbors.cpp  test_quadtree_ray_casting.cpp  test_quadtree_ray_tracing.cpp  test_sphere_flip_convex.py
test/gtest/: house_expo_room_1451.ply  test_bayesian_hilbert_map_2d.cpp  test_bayesian_hilbert_map_torch_2d.cpp  test_city_street_map.cpp  test_convex_hull.cpp  test_convex_hull_3d_impls.cpp  test_cow_and_lady.cpp  test_depth_frame_3d_basic.cpp  test_depth_frame_3d_serialization.cpp  test_gazebo_room_2d.cpp  test_hidden_point_removal.cpp  test_house_expo_map.cpp  test_intersection_line_ellipse.cpp  test_lidar_frame_2d.cpp  test_lidar_frame_2d_basic.cpp  test_lidar_frame_2d_serialization.cpp  test_lidar_frame_3d.cpp  test_lidar_frame_3d_basic.cpp  test_lidar_frame_3d_serialization.cpp  test_marching_cubes.cpp  test_mesh_sdf.cpp  test_newer_college.cpp  test_occupancy_octree_basic.cpp  test_occupancy_octree_build.cpp  test_occupancy_octree_build_newer_college.cpp  test_occupancy_octree_build_profiling.cpp  test_occupancy_octree_impls.cpp  test_occupancy_octree_ray_casting.cpp  test_occupancy_quadtree.cpp  test_occupancy_quadtree_basic.cpp  test_occupancy_quadtree_batch_ray_casting.cpp  test_occupancy_quadtree_build.cpp  test_occupancy_quadtree_build_from_image.cpp  test_occupancy_quadtree_find_neighbors.cpp  test_occupancy_quadtree_house_expo.cpp  test_occupancy_quadtree_leaf_in_aabb.cpp  test_occupancy_quadtree_leaf_of_node.cpp  test_occupancy_quadtree_leaf_on_ray.cpp  test_occupancy_quadtree_leaf_vertices.cpp  test_occupancy_quadtree_occupied_leaf_on_ray.cpp  (+9 more)
test/gtest/octomap/include/octomap/: MCTables.h  MapCollection.h  MapNode.h  MapNode.hxx  OcTree.h  OcTreeDataNode.h  OcTreeKey.h  OcTreeNode.h  OcTreeStamped.h  OccupancyOcTreeBase.h  octomap_types.h  octomap_utils.h
test/gtest/octomap/include/octomap/math/: Pose6D.h  Utils.h  Vector3.h
test/gtest/octomap/src/: AbstractOcTree.cpp  AbstractOccupancyOcTree.cpp  CountingOcTree.cpp  OcTreeNode.cpp  Pointcloud.cpp  ScanGraph.cpp
test/gtest/octomap/src/math/: Pose6D.cpp  Quaternion.cpp  Vector3.cpp
test/gtest/ros1/: test_rviz_plugin_occupancy_tree_grid_display.cpp
test/pytest/: test_pyobject_occupancy_octree.py  test_pyobject_occupancy_quadtree.py  test_quadtree_build_from_image.py
test/ros1/: test_rviz_plugin_occupancy_tree_display.cpp
(+116 files in other folders)
