<?xml version="1.0"?>
<package format="2">
    <name>erl_geometry</name>
    <version>0.1.0</version>
    <description>erl_geometry is a C++ library of geometry data structures, algorithms and datasets.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_geometry.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>erl_common</depend>
    <depend>erl_covariance</depend>
    <depend>absl</depend>
    <depend>Qhull</depend>
    <depend>Open3D</depend>
    <depend>std_msgs</depend>
    <depend>roscpp</depend>
    <depend>rviz</depend>
    <depend>OGRE</depend>
    <depend>qtbase5-dev</depend>
    <depend>libqt5-core</depend>
    <depend>libqt5-widgets</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

</package>
