[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
description = "Python bindings for erl_geometry"
python_pkg_name = "erl_geometry"
pybind_module_name = "pyerl_geometry"
erl_dependencies = ["erl_common", "erl_covariance"]
build_type = "Release"
version = "0.1.0"
author = "Zhirui Dai"
author_email = "zhdai@ucsd.edu"
entry_points = { console_scripts = [
    "erl-geometry-house-expo-generate-trajectory=erl_geometry.house_expo.generate_trajectory:main",
    "erl-geometry-house-expo-generate-all-trajectories=erl_geometry.house_expo.generate_all_trajectories:main",
    "erl-geometry-house-expo-verify-data=erl_geometry.house_expo.verify_data:main",
    "erl-geometry-house-expo-uncompress-json-data=erl_geometry.house_expo.uncompress_data:uncompress_json_data",
    "erl-geometry-house-expo-uncompress-traj-data=erl_geometry.house_expo.uncompress_data:uncompress_traj_data",
    "erl-geometry-house-expo-list-data=erl_geometry.house_expo.list_data:main",
    "erl-geometry-house-expo-explorer-plotly=erl_geometry.house_expo.explorer_plotly:main",
    "erl-geometry-house-expo-explorer-vedo=erl_geometry.house_expo.explorer_vedo:main",
    "erl-geometry-house-expo-play-trajectory=erl_geometry.house_expo.play_trajectory:main",
    "erl-geometry-house-expo-play-trajectory_vedo=erl_geometry.house_expo.play_trajectory_vedo:main",
    "erl-geometry-house-expo-get-room-index=erl_geometry.house_expo.get_room_index:main",
] }
license = "MIT"
